# security-data-fabric

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY_AUDIT.md  TRADEOFFS.md  coverage.xml  docker-compose.yml  init-db.sql  production_hardening_checklist.md  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  release.yml  sbom.yml  security-scan.yml
cicd/: dependabot.yml  security-scan.yml  test-pipeline.yml
docs/: ARCHITECTURE.md  api_reference.md  architecture.md  integration_guide.md  runbook.md
docs/architecture/: iac-resource-matrix.md
docs/business/: cost-model.md  roi-and-incident-economics.md
docs/executive/: one-page-ciso-brief.md
docs/operations/: deployment-logistics-runbook.md  integration-dependencies.md
docs/strategy/: non-goals-and-limitations.md  pilot-plan-8-weeks.md  tool-comparison-matrix.md
init-scripts/: 01-extensions.sql  README.md
src/: __init__.py  main.py
src/alerting/: __init__.py  alert_manager.py  pagerduty_sender.py  servicenow_sender.py  slack_sender.py
src/analytics/: __init__.py  anomaly_detector.py  compliance_reporter.py  forecaster.py  sla_tracker.py
src/api/: README.md  __init__.py  dependencies.py  main.py  middleware.py
src/api/routes/: __init__.py  dashboard.py  health.py  incidents.py  ingest.py  predictions.py  search.py
src/bronze/: README.md  __init__.py  base_connector.py  dynatrace_connector.py  github_connector.py  pagerduty_connector.py  schema_registry.py  servicenow_connector.py  splunk_connector.py
src/chatbot/: availability_templates.py
src/compliance/: __init__.py  soc2_controls.py
src/config/: __init__.py  settings.py
src/connectors/: base.py  servicenow.py
src/core/: dimension_populator.py  embedding_pipeline.py  gold_aggregator.py  ingestion_pipeline.py  scheduler.py  transformer.py
src/data/fixtures/: mock_grafana_incidents.py
src/database/: __init__.py  connection.py  models.py
src/gold/: correlator.py  risk_scorer.py  root_cause_analyzer.py  timeline_builder.py
src/ingestion/: __init__.py  base_connector.py  dynatrace_connector.py  github_webhook_connector.py  pagerduty_connector.py  servicenow_connector.py  splunk_connector.py
src/intelligence/: __init__.py  correlator.py  risk_scorer.py  root_cause_analyzer.py  timeline_builder.py
src/ml/: __init__.py  anomaly_detector.py  embedding_engine.py  forecaster.py  trajectory_predictor.py
src/models/: audit_logs.py
src/monitoring/: metrics.py
src/observability/: __init__.py  logging.py  metrics.py
src/processing/: __init__.py  deduplicator.py  enricher.py  normalizer.py  schema.py
src/search/: README.md  __init__.py  search_api.py  semantic_search.py  vector_store.py
src/security/: __init__.py  input_validator.py  mfa_service.py  redis_cache.py  secrets_manager.py  secrets_rotation.py  service_auth.py  token_rotation.py  zero_day_shield.py
src/silver/: deduplicator.py  enricher.py  normalizer.py  unified_schema.py
tests/: conftest.py  test_analytics.py  test_api.py  test_auth.py  test_cache.py  test_chatbot_live.py  test_embeddings.py  test_gold_layer.py  test_ingestion.py  test_ingestion_e2e.py  test_ingestion_metrics.py  test_ingestion_pipeline.py  test_processing.py  test_scheduler.py  test_security.py  test_silver_layer_minimal.py
tests/security/: test_ingestion_security.py
tests/test_bronze/: test_connectors.py
tests/test_gold/: conftest.py  test_correlator.py  test_risk_scorer.py  test_root_cause_analyzer.py  test_timeline_builder.py
tests/test_ml/: test_anomaly_detector.py  test_embedding_engine.py  test_forecaster.py  test_trajectory_predictor.py
tests/test_search/: test_semantic_search.py  test_vector_store.py
tests/test_silver/: test_deduplicator.py  test_enricher.py  test_normalizer.py
